[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Collectibles/BaseCollectible/Collectible.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="Collectible" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
